--- a/incubator/jaeger/values.yaml
+++ b/incubator/jaeger/values.yaml
@@ -1,10 +1,27 @@
 # Default values for jaeger.
 # This is a YAML-formatted file.
+# Jaeger values are grouped by component. Cassandra values override subchart values
 
-# Begin: Override values on the Cassandra/ElasticSearch subchart to customize for Jaeger
-# This chart has been based on the Kubernetes integration found in the following repo:
-# https://github.com/jaegertracing/jaeger-kubernetes/blob/master/production/cassandra.yml
-# https://github.com/jaegertracing/jaeger-kubernetes/blob/master/production-elasticsearch/elasticsearch.yml
+provisionDataStore:
+  cassandra: true
+  elasticsearch: false
+
+storage:
+  # allowed values (cassandra, elasticsearch)
+  type: cassandra
+  cassandra:
+    host: cassandra
+    port: 9042
+    user: user
+    password: password
+  elasticsearch:
+    scheme: http
+    host: elasticsearch
+    port: 9200
+    user: user
+    password: password
+
+# Begin: Override values on the Cassandra subchart to customize for Jaeger
 cassandra:
   image:
     tag: 3.11
@@ -12,34 +29,23 @@ cassandra:
     # To enable persistence, please see the documentation for the Cassandra chart
     enabled: false
   config:
-    # Change the host value to point to an existing Cassandra instance
-    # Be sure to set both tags.cassandra and tags.elasticsearch to false
-    host: ""
     cluster_name: jaeger
     seed_size: 1
     dc_name: dc1
     rack_name: rack1
     endpoint_snitch: GossipingPropertyFileSnitch
-
-elasticsearch:
-  config:
-    # Change the host value to point to an existing ElasticSearch instance
-    # Be sure to set both tags.cassandra and tags.elasticsearch to false
-    host: ""
-    username: "elastic"
-    password: "changeme"
-# End: Override values on the Cassandra/ElasticSearch subchart to customize for Jaeger
+# End: Override values on the Cassandra subchart to customize for Jaeger
 
 # Begin: Default values for the various components of Jaeger
-tags:
-  # Chose which backing store to use. By default Cassandra is enabled.
-  cassandra: true
-  elasticsearch: false
-
+# This chart has been based on the Kubernetes integration found in the following repo:
+# https://github.com/jaegertracing/jaeger-kubernetes/blob/master/production/jaeger-production-template.yml
+#
+# This is the jaeger-cassandra-schema Job which sets up the Cassandra schema for
+# use by Jaeger
 schema:
   annotations: {}
   image: jaegertracing/jaeger-cassandra-schema
-  tag: 0.8
+  tag: 1.0.0
   pullPolicy: IfNotPresent
   # Acceptable values are test and prod. Default is for production use.
   mode: prod
@@ -53,21 +59,42 @@ schema:
   ## Additional pod labels
   ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
   podLabels: {}
+
+# Begin: Override values on the Elasticsearch subchart to customize for Jaeger
+elasticsearch:
+  image:
+    tag: "5.4"
+  cluster:
+    name: "tracing"
+  data:
+    persistance:
+      enabled: false
+  rbac:
+    create: false
+
 agent:
   enabled: true
   annotations: {}
   image: jaegertracing/jaeger-agent
-  tag: 0.8
+  tag: 1.0.0
   pullPolicy: IfNotPresent
+  collector:
+    host: null
+    port: null
   cmdlineParams: {}
+  daemonset:
+    useHostPort: false
   service:
     annotations: {}
+    type: ClusterIP
     # zipkinThriftPort :accept zipkin.thrift over compact thrift protocol
     zipkinThriftPort: 5775
     # compactPort: accept jaeger.thrift over compact thrift protocol
     compactPort: 6831
     # binaryPort: accept jaeger.thrift over binary thrift protocol
     binaryPort: 6832
+    # samplingPort: (HTTP) serve configs, sampling strategies
+    samplingPort: 5778
   resources: {}
     # limits:
     #   cpu: 500m
@@ -79,13 +106,17 @@ agent:
   ## Additional pod labels
   ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
   podLabels: {}
+
 collector:
+  enabled: true
   annotations: {}
   image: jaegertracing/jaeger-collector
-  tag: 0.8
+  tag: 1.0.0
   pullPolicy: IfNotPresent
   dnsPolicy: ClusterFirst
   cmdlineParams: {}
+  useNodePort: false
+  replicaCount: 1
   service:
     annotations: {}
     type: ClusterIP
@@ -106,21 +137,57 @@ collector:
   ## Additional pod labels
   ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
   podLabels: {}
+
 query:
+  enabled: true
   annotations: {}
   image: jaegertracing/jaeger-query
-  tag: 0.8
+  tag: 1.0.0
   pullPolicy: IfNotPresent
   dnsPolicy: ClusterFirst
   cmdlineParams: {}
   healthCheckPort: 16687
+  replicaCount: 1
   service:
     annotations: {}
-    type: NodePort
+    type: ClusterIP
     # queryPort: externally accessible port for UI and API
     queryPort: 80
     # targetPort: the internal port the UI and API are exposed on
     targetPort: 16686
+  ingress:
+    enabled: false
+    annotations: {}
+    # Used to create an Ingress record.
+    # hosts:
+    #   - chart-example.local
+    # annotations:
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    # tls:
+      # Secrets must be manually created in the namespace.
+      # - secretName: chart-example-tls
+      #   hosts:
+      #     - chart-example.local
+  resources: {}
+    # limits:
+    #   cpu: 500m
+    #   memory: 512Mi
+    # requests:
+    #    cpu: 256m
+    #    memory: 128Mi
+  nodeSelector: {}
+  ## Additional pod labels
+  ## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
+  podLabels: {}
+
+spark:
+  enabled: false
+  annotations: {}
+  image: jaegertracing/spark-dependencies
+  tag: latest
+  pullPolicy: Always
+  schedule: "*/12 * * * *"
   resources: {}
     # limits:
     #   cpu: 500m
@@ -134,16 +201,43 @@ query:
   podLabels: {}
 # End: Default values for the various components of Jaeger
 
-ingress:
+hotrod:
   enabled: false
-  # Used to create an Ingress record.
-  # hosts:
-  #   - chart-example.local
-  # annotations:
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  # tls:
-    # Secrets must be manually created in the namespace.
-    # - secretName: chart-example-tls
-    #   hosts:
-    #     - chart-example.local
+  replicaCount: 1
+  image:
+    repository: mikelorant/jaeger-hotrod
+    tag: latest
+    pullPolicy: Always
+  service:
+    annotations: {}
+    name: hotrod
+    type: ClusterIP
+    externalPort: 80
+    internalPort: 8080
+  ingress:
+    enabled: false
+    # Used to create Ingress record (should be used with service.type: ClusterIP).
+    hosts:
+      - chart-example.local
+    annotations: {}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    tls:
+      # Secrets must be manually created in the namespace.
+      # - secretName: chart-example-tls
+      #   hosts:
+      #     - chart-example.local
+  resources: {}
+    # We usually recommend not to specify default resources and to leave this as a conscious
+    # choice for the user. This also increases chances charts run on environments with little
+    # resources, such as Minikube. If you do want to specify resources, uncomment the following
+    # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+    # limits:
+    #   cpu: 100m
+    #   memory: 128Mi
+    # requests:
+    #   cpu: 100m
+    #   memory: 128Mi
+  tracing:
+    host: null
+    port: 6831
