--- a/incubator/webpagetest-server/templates/deployment.yaml
+++ b/incubator/webpagetest-server/templates/deployment.yaml
@@ -31,23 +31,33 @@ spec:
               port: {{ .Values.service.internalPort }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
-        {{- if .Values.ec2Locations.enabled }}
           env:
+          {{- if .Values.ec2Locations.enabled }}
           - name: EC2_INIT
             value: 'true'
+          {{- end }}
           volumeMounts:
+          {{- if .Values.ec2Locations.enabled }}
           - name: wpt-user-data
             mountPath: /user-data
             readOnly: true
-#            subPath: user-data
-        {{- end }}
+          {{- end }}
+          {{- if .Values.persistence.enabled }}
+          - name: wpt-local-archive
+            mountPath: /data/archive
+          {{- end }}
     {{- if .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml .Values.nodeSelector | indent 8 }}
     {{- end }}
-      {{- if .Values.ec2Locations.enabled }}
       volumes:
+      {{- if .Values.ec2Locations.enabled }}
       - name: wpt-user-data
         secret:
           secretName: {{ printf "%s-%s" .Release.Name "user-data"  }}
+      {{- end }}
+      {{- if .Values.persistence.enabled }}
+      - name: wpt-local-archive
+        persistentVolumeClaim:
+          claimName: {{ template "fullname" . }}
       {{- end }}
