--- a/incubator/kafka/values.yaml
+++ b/incubator/kafka/values.yaml
@@ -29,6 +29,15 @@ resources: {}
 ## production servers this number should likely be much larger.
 storage: "1Gi"
 
+## The StatefulSet Update Strategy which Kafka will use when changes are applied.
+## ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#update-strategies
+updateStrategy: "OnDelete"
+
+## If `updateStrategy` is set to "RollingUpdate", you may optionally specify which partition
+## should be updated first.
+## ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#partitions
+rollingUpdatePartition: 0
+
 ## The name of the storage class which the cluster should use.
 # storageClass: default
 
