[incubator/webpagetest-server] Commits are in latest, not server, so changed pod version

--- a/incubator/webpagetest-server/values.yaml
+++ b/incubator/webpagetest-server/values.yaml
@@ -4,7 +4,7 @@
 replicaCount: 1
 image:
   repository: webpagetest/server
-  tag: release
+  tag: latest
   pullPolicy: IfNotPresent
 service:
   name: webpagetest-server
