--- a/incubator/chartmuseum/templates/ingress.yaml
+++ b/incubator/chartmuseum/templates/ingress.yaml
@@ -1,33 +1,33 @@
-{{- $root := . -}}
 {{- $servicePort := .Values.service.externalPort -}}
-{{- $serviceName := include "common.labels.standard" . -}}
-{{- range .Values.ingress }}
+{{- $serviceName := include "common.fullname" . -}}
+{{- if .Values.ingress.enabled }}
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
+  name: {{ include "common.fullname" . }}
   annotations:
-{{ toYaml .annotations | indent 4 }}
+{{ toYaml .Values.ingress.annotations | indent 4 }}
   labels:
-{{- if .labels }}
-{{ toYaml .labels | indent 4 }}
+{{- if .Values.ingress.labels }}
+{{ toYaml .Values.ingress.labels | indent 4 }}
 {{- end }}
-{{ include "common.labels.standard" $root | indent 4 }}
-    ingressName: {{ .name }}
-  name: {{ include "common.fullname" $root }}-{{ .name }}
+{{ include "common.labels.standard" . | indent 4 }}
 spec:
   rules:
-  {{- range $host, $path := .hosts }}
-    - host: {{ $host }}
-      http:
-        paths:
-          - path: {{ $path }}
-            backend:
-              serviceName: {{ $serviceName }}
-              servicePort: {{ $servicePort }}
+  {{- range $host, $paths := .Values.ingress.hosts }}
+  - host: {{ $host }}
+    http:
+      paths:
+      {{- range $paths }}
+      - path: {{ . }}
+        backend:
+          serviceName: {{ $serviceName }}
+          servicePort: {{ $servicePort }}
+      {{- end -}}
   {{- end -}}
-  {{- if .tls }}
+  {{- if .Values.ingress.tls }}
   tls:
-{{ toYaml .tls | indent 4 }}
+{{ toYaml .Values.ingress.tls | indent 4 }}
   {{- end -}}
 {{- end -}}
