--- a/incubator/chartmuseum/values.yaml
+++ b/incubator/chartmuseum/values.yaml
@@ -42,11 +42,11 @@ env:
     BASIC_AUTH_PASS:
 deployment:
   ## Chartmuseum Deployment annotations
-  annotations:
+  annotations: {}
   #   name: value
 replica:
   ## Chartmuseum Replicas annotations
-  annotations:
+  annotations: {}
   ## Read more about kube2iam to provide access to s3 https://github.com/jtblin/kube2iam
   #   iam.amazonaws.com/role: role-arn
 service:
@@ -81,8 +81,8 @@ persistence:
   # StorageClass: "-"
 
 ## Ingress for load balancer
-# ingress:
-# - name: "default"
+ingress:
+  eabled: false
 ## Chartmuseum Ingress labels
 ##
 #   labels:
@@ -98,8 +98,9 @@ persistence:
 ## Must be provided if Ingress is enabled
 ##
 #   hosts:
-#     "chartmuseum.domain.com": /
-#     "www.chartmuseum.domain.com": /
+#     chartmuseum.domain.com:
+#         - /charts
+#         - /index.yaml
 
 ## Chartmuseum Ingress TLS configuration
 ## Secrets must be manually created in the namespace
