--- a/stable/datadog/templates/service.yaml
+++ b/stable/datadog/templates/service.yaml
@@ -16,7 +16,7 @@ spec:
   - port: 8125
     name: dogstatsdport
     protocol: UDP
-  {{- if .Values.datadog.apmEnabled }}
+  {{- if or .Values.deployment.apmEnabled .Values.datadog.apmEnabled }}
   - port: 8126
     name: traceport
     protocol: TCP
