--- a/stable/mediawiki/templates/deployment.yaml
+++ b/stable/mediawiki/templates/deployment.yaml
@@ -17,33 +17,33 @@ spec:
       containers:
       - name: {{ template "mediawiki.fullname" . }}
         image: "{{ .Values.image }}"
-        imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
+        imagePullPolicy: {{ .Values.imagePullPolicy | quote }}
         env:
         - name: ALLOW_EMPTY_PASSWORD
-        {{- if .Values.allowEmptyPassword }}
-          value: "yes"
-        {{- else }}
-          value: "no"
-        {{- end }}
+          value: "{{ .Values.allowEmptyPassword }}"
         - name: MARIADB_HOST
         {{- if .Values.mariadb.enabled }}
           value: {{ template "mediawiki.mariadb.fullname" . }}
         {{- else }}
-          value: {{ default "" .Values.externalDatabase.host | quote }}
+          value: {{ .Values.externalDatabase.host | quote }}
         {{- end }}
         - name: MARIADB_PORT_NUMBER
+        {{- if .Values.mariadb.enabled }}
           value: "3306"
+        {{ else }}
+          value: {{ .Values.externalDatabase.port | quote }}
+        {{ end }}
         - name: MEDIAWIKI_DATABASE_NAME
         {{- if .Values.mariadb.enabled }}
-          value: {{ default "" .Values.mariadb.mariadbDatabase | quote }}
+          value: {{ .Values.mariadb.mariadbDatabase | quote }}
         {{- else }}
-          value: {{ default "" .Values.externalDatabase.database | quote }}
+          value: {{ .Values.externalDatabase.database | quote }}
         {{- end }}
         - name: MEDIAWIKI_DATABASE_USER
         {{- if .Values.mariadb.enabled }}
-          value: {{ default "" .Values.mariadb.mariadbUser | quote }}
+          value: {{ .Values.mariadb.mariadbUser | quote }}
         {{- else }}
-          value: {{ default "" .Values.externalDatabase.user | quote }}
+          value: {{ .Values.externalDatabase.user | quote }}
         {{- end }}
         - name: MEDIAWIKI_DATABASE_PASSWORD
           valueFrom:
@@ -56,24 +56,24 @@ spec:
               key: db-password
             {{- end }}
         - name: MEDIAWIKI_USERNAME
-          value: {{ default "" .Values.mediawikiUser | quote }}
+          value: {{ .Values.mediawikiUser | quote }}
         - name: MEDIAWIKI_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ template "mediawiki.fullname" . }}
               key: mediawiki-password
         - name: MEDIAWIKI_EMAIL
-          value: {{ default "" .Values.mediawikiEmail | quote }}
+          value: {{ .Values.mediawikiEmail | quote }}
         - name: MEDIAWIKI_WIKI_NAME
-          value: {{ default "" .Values.mediawikiName | quote }}
+          value: {{ .Values.mediawikiName | quote }}
         - name: SMTP_HOST_ID
-          value: {{ default "" .Values.smtpHostID | quote }}
+          value: {{ .Values.smtpHostID | quote }}
         - name: SMTP_HOST
-          value: {{ default "" .Values.smtpHost | quote }}
+          value: {{ .Values.smtpHost | quote }}
         - name: SMTP_PORT
-          value: {{ default "" .Values.smtpPort | quote }}
+          value: {{ .Values.smtpPort | quote }}
         - name: SMTP_USER
-          value: {{ default "" .Values.smtpUser | quote }}
+          value: {{ .Values.smtpUser | quote }}
         - name: SMTP_PASSWORD
           valueFrom:
             secretKeyRef:
