--- a/stable/mediawiki/templates/externaldb-secrets.yaml
+++ b/stable/mediawiki/templates/externaldb-secrets.yaml
@@ -10,5 +10,5 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  db-password: {{ .Values.externalDatabase.password | b64enc | quote }}
+  db-password: {{ default "" .Values.externalDatabase.password | b64enc | quote }}
 {{- end }}
