[neo4j] - add core.persistentVolume.enabled = true as default and to README

--- a/stable/neo4j/values.yaml
+++ b/stable/neo4j/values.yaml
@@ -26,6 +26,8 @@ core:
   numberOfServers: 3
   persistentVolume:
 
+    enabled: true
+
     ## core server data Persistent Volume mount root path
     ##
     mountPath: /data
