--- a/incubator/webpagetest-server/templates/agentIngress.yaml
+++ b/incubator/webpagetest-server/templates/agentIngress.yaml
@@ -6,9 +6,9 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ template "fullname" . }}-agent
+  name: {{ template "webpagetest.fullname" . }}-agent
   labels:
-    app: {{ template "name" . }}
+    app: {{ template "webpagetest.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
