--- a/incubator/webpagetest-server/templates/service.yaml
+++ b/incubator/webpagetest-server/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "webpagetest.fullname" . }}
   labels:
-    app: {{ template "name" . }}
+    app: {{ template "webpagetest.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -15,5 +15,5 @@ spec:
       protocol: TCP
       name: {{ .Values.service.name }}
   selector:
-    app: {{ template "name" . }}
+    app: {{ template "webpagetest.name" . }}
     release: {{ .Release.Name }}
