--- a/stable/datadog/values.yaml
+++ b/stable/datadog/values.yaml
@@ -37,8 +37,10 @@ daemonset:
   ## ref: https://kubernetes.io/docs/tasks/manage-daemon/update-daemon-set/
   # updateStrategy: RollingUpdate
 
-  ## Un-comment this to enable APM and tracing for the daemon set only, on
-  ## ports 7777 and 8126
+  ## Un-comment this to enable APM and tracing for the daemon set
+  ## only, on ports 7777 and 8126. Note that if `datadog.apmEnabled:
+  ## true` is set, then setting `datadog.daemonset.apmEnabled: false`
+  ## will not override it.
   ## ref: https://github.com/DataDog/docker-dd-agent#tracing-from-the-host
   ##
   # apmEnabled: true
@@ -52,7 +54,9 @@ deployment:
   replicas: 1
 
   ## Un-comment this to enable APM and tracing for the deployment
-  ## only, on ports 7777 and 8126
+  ## only, on ports 7777 and 8126. Note that if `datadog.apmEnabled:
+  ## true` is set, then setting `datadog.deployment.apmEnabled: false`
+  ## will not override it.
   ## ref: https://github.com/DataDog/docker-dd-agent#tracing-from-the-host
   ##
   # apmEnabled: true
