Allow adding custom environment variables (for plugins support)
Signed-off-by: Eran Kampf <eran@ekampf.com>

--- a/stable/sentry/templates/web-deployment.yaml
+++ b/stable/sentry/templates/web-deployment.yaml
@@ -65,6 +65,9 @@ spec:
           value: {{ .Values.email.use_tls | quote }}
         - name: SENTRY_SERVER_EMAIL
           value: {{ .Values.email.from_address | quote }}
+{{- if .Values.web.env }}
+{{ toYaml .Values.web.env | indent 8 }}
+{{- end }}
         volumeMounts:
         - mountPath: {{ .Values.persistence.filestore_dir }}
           name: sentry-data
