--- a/stable/sentry/templates/cron-deployment.yaml
+++ b/stable/sentry/templates/cron-deployment.yaml
@@ -66,5 +66,8 @@ spec:
           value: {{ .Values.email.use_tls | quote }}
         - name: SENTRY_SERVER_EMAIL
           value: {{ .Values.email.from_address | quote }}
+{{- if .Values.cron.env }}
+{{ toYaml .Values.cron.env | indent 8 }}
+{{- end }}
         resources:
 {{ toYaml .Values.cron.resources | indent 12 }}
