--- a/stable/sentry/values.yaml
+++ b/stable/sentry/values.yaml
@@ -16,6 +16,11 @@ web:
     requests:
       cpu: 300m
       memory: 300Mi
+  env:
+    - name: GITHUB_APP_ID
+      value:
+    - name: GITHUB_API_SECRET
+      value:
 
 # How many cron instances to run
 cron:
